service and ng module

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,6 @@
-<p>board works!</p>
+<h1>Square Color Game</h1>
+
+<main>
+  <app-square *ngFor="let square of squares" ;>
+  </app-square>
+</main>
