--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,6 +1,6 @@
 <h1>Square Color Game</h1>
 
 <main>
-  <app-square *ngFor="let square of squares" [square]="square">
+  <app-square *ngFor="let square of squares" [square]="square" (click)="changeColor(square)">
   </app-square>
 </main>
